# automatizai-challenge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: enums.py  exceptions.py  main.py  models.py  schemas.py
src/agents/: __init__.py  cartao_cnpj_extractor.py  certidao_negativa_federal_extractor.py  contrato_social_extractor.py  cross_document_analyzer.py  document_type_validator.py
src/api/: app.py  dependencies.py
src/api/v1/: routes.py
src/core/: settings.py  types.py
src/core/base/: agents.py  exceptions.py  models.py  usecases.py
src/core/database/: core.py
src/core/logging/: config.py
src/core/storage/: __init__.py  backends.py
src/services/: pdf.py
src/usecases/: __init__.py  analysis.py
src/worker/: celery.py  tasks.py
tests/: conftest.py  factories.py
tests/agents/: test_cross_document_analyzer.py
tests/api/v1/: test_routes.py
tests/usecases/analysis/: test_analyze_documents_job.py
