[project]
name = "automatizai-code-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "celery[redis]>=5.6.0",
    "fastapi[all]>=0.124.2",
    "langchain>=1.1.3",
    "langchain-openai>=1.1.2",
    "langfuse>=3.10.6",
    "langgraph>=1.0.4",
    "pymupdf>=1.26.7",
    "python-json-logger>=4.0.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.27",
    "asyncpg>=0.31.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "rich>=14.2.0",
    "ruff>=0.14.9",
    "testcontainers>=4.13.3",
]

[tool.pytest.ini_options]
pythonpath = "."
python_files = ["test_*.py"]
addopts = [
    "-vv", 
    "-s",
    "-p no:warnings",
    "--log-cli-level=INFO",
]
asyncio_default_fixture_loop_scope = "function"
log_level = "INFO"
log_cli = true
log_cli_level = "INFO"
